# scratchmudxx

./: .gitattributes  .gitignore  README  autorun  bootstrap  configure.ac
data/: README
m4/: README
src/: Makefile.am
src/include/scratch/: color.hpp  data.hpp  descriptor.hpp  game.hpp  logger.hpp  random.hpp  scratch.hpp  server.hpp  storage.hpp  storage_memory.hpp  string.hpp
src/scratch/: Makefile.am  color.cpp  data.cpp  descriptor.cpp  game.cpp  logger.cpp  main.cpp  random.cpp  server.cpp  string.cpp
